# ad4m

./: .gitignore  .gitmodules  .npmignore  AGENTS.md  CHANGELOG  CHANGELOG.md  CODERABBIT_FIXES.md  Cargo.toml  PR_652_FIXES_SUMMARY.md  README.md  SHACL_ARCHITECTURE_ANALYSIS.md  SHACL_FINAL_ARCHITECTURE.md  SHACL_IMPLEMENTATION_COMPLETE.md  SHACL_IMPLEMENTATION_PLAN.md  SHACL_LINK_OVERVIEW.md  SHACL_PROGRESS.md  SHACL_SDNA_ARCHITECTURE.md  SHACL_STATUS_AND_PATH_FORWARD.md  SHACL_WITH_FLOWS_SEPARATE_LINKS.md  create-hc-symlinks.sh  default.nix  download-binaries-linux.sh  download-binaries-macos.sh  download-binaries-windows.ps1  holochain_version.nix  jest.config.js  linkLanguage.test.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prepareLinkLanguageTest.sh  removePnpm.js  rollup.config.js  rust-toolchain.toml  setVersion.js  setup-hooks.bat  setup-hooks.sh  tsconfig.json  turbo.json  (+1 more)
bootstrap-languages/agent-language/hc-dna/zomes/agent_store/: Cargo.toml
bootstrap-languages/agent-language/hc-dna/zomes/agent_store/src/: lib.rs  utils.rs
bootstrap-languages/agent-language/hc-dna/zomes/agent_store_integrity/: Cargo.toml
bootstrap-languages/agent-language/hc-dna/zomes/agent_store_integrity/src/: lib.rs
bootstrap-languages/direct-message-language/hc-dna/tests/sweettest/: Cargo.toml
bootstrap-languages/direct-message-language/hc-dna/tests/sweettest/src/: integration_tests.rs  lib.rs  test_direct_message.rs  utils.rs
bootstrap-languages/direct-message-language/hc-dna/zomes/direct-message/: Cargo.toml
bootstrap-languages/direct-message-language/hc-dna/zomes/direct-message-integrity/: Cargo.toml
bootstrap-languages/direct-message-language/hc-dna/zomes/direct-message-integrity/src/: ad4m.rs  (+1 more)
bootstrap-languages/file-storage/hc-dna/zomes/file_storage/: Cargo.toml
bootstrap-languages/file-storage/hc-dna/zomes/integrity/: Cargo.toml
bootstrap-languages/p-diff-sync-socket-signaling/hc-dna/zomes/perspective_diff_sync/: Cargo.toml
bootstrap-languages/p-diff-sync-socket-signaling/hc-dna/zomes/perspective_diff_sync_integrity/: Cargo.toml
bootstrap-languages/p-diff-sync/hc-dna/tests/sweettest/: Cargo.toml
bootstrap-languages/p-diff-sync/hc-dna/zomes/perspective_diff_sync/: Cargo.toml
bootstrap-languages/p-diff-sync/hc-dna/zomes/perspective_diff_sync_integrity/: Cargo.toml
cli/: .gitignore  Cargo.toml  README.md  build.rs  mainnet_seed.json  package.json  seed_proto.json
cli/queries/: agent.gql
cli/src/: ad4m.rs  ad4m_executor.rs  agent.gql  agent.rs  bootstrap_publish.rs  dev.rs  eve.rs  expression.rs  formatting.rs  languages.gql  languages.rs  main.rs  neighbourhoods.gql  neighbourhoods.rs  perspectives.gql  perspectives.rs  repl.rs  runtime.gql  runtime.rs  startup.rs  types.rs  util.rs
mcp-server/: Cargo.toml
mcp-server/src/: main.rs  server.rs
runtime/: Cargo.toml
runtime/src/: main.rs
rust-client/: Cargo.toml  README.md  schema.gql
rust-client/src/: agent.gql  agent.rs  expressions.gql  expressions.rs  languages.rs  lib.rs  literal.rs  neighbourhoods.gql  neighbourhoods.rs  perspective_proxy.rs  perspectives.gql  perspectives.rs  runtime.gql  runtime.rs  subject_proxy.rs  types.rs  util.rs
rust-executor/: .gitignore  Cargo.toml  FILTERED_PROLOG_ENGINES.md  MIGRATION_REMOVAL_GUIDE.md  README.md  build.rs  create-mainnet-simple.js  dapp  example.js  executor  package.json
rust-executor/graphql-checker/: package.json
rust-executor/src/: config.rs  dapp_server.rs  db.rs  email_service.rs  globals.rs  graphql.rs  graphql_types.rs  init.rs  js_core.rs  lib.rs  logging.rs  main.js  main.rs  mainnet_seed.json  mutation_resolvers.rs  neighbourhoods.rs  prolog.rs  pubsub.rs  query_resolvers.rs  runtime.js  runtime.rs  start_server.rs  subscription_resolvers.rs  test_utils.rs  types.rs  utils.rs  wallet.rs
rust-executor/src/agent/: auth.rs  capabilities.rs  jwt.rs  mod.rs  signatures.rs
rust-executor/src/agent/capabilities/: apps_map.rs  defs.rs  mod.rs  requests_map.rs  token.rs  types.rs
rust-executor/src/ai_service/: audio_stream.rs  error.rs  mod.rs
rust-executor/src/entanglement_service/: entanglement_service_extension.js  entanglement_service_extension.rs  mod.rs
rust-executor/src/graphql/: graphql_types.rs  mod.rs  mutation_resolvers.rs  query_resolvers.rs  subscription_resolvers.rs  utils.rs  warp_server.rs
rust-executor/src/holochain_service/: holochain_service_extension.js  holochain_service_extension.rs  interface.rs  mod.rs
rust-executor/src/js_core/: agent_extension.js  agent_extension.rs  ai_extension.rs  error.rs  futures.rs  jwt_extension.js  jwt_extension.rs  languages_extension.js  languages_extension.rs  main.js  mod.rs  options.rs  pubsub_extension.js  pubsub_extension.rs  runtime_extension.rs  signature_extension.js  signature_extension.rs  string_module_loader.rs  testlib.js  utils.rs  utils_extension.js  utils_extension.rs  wallet_extension.js  wallet_extension.rs
rust-executor/src/languages/: byte_array.rs  language.rs  mod.rs
rust-executor/src/libp2p_service/: mod.rs
rust-executor/src/mcp/: mod.rs  server.rs  tools.rs
rust-executor/src/perspectives/: migration.rs  mod.rs  perspective_instance.rs  sdna.rs  shacl_parser.rs  utils.rs
rust-executor/src/prolog_service/: FILTERED_PROLOG_ENGINES.md  assert_utils.rs  embedding_cache.rs  engine.rs  engine_pool.rs  filtered_pool.rs  interface.rs  mod.rs  pool_trait.rs  prolog_service_extension.js  prolog_service_extension.rs  sdna_pool.rs  source_filtering.rs  types.rs
rust-executor/src/runtime/: mod.rs
rust-executor/src/runtime_service/: mod.rs  runtime_service_extension.js  runtime_service_extension.rs
rust-executor/src/surreal_service/: mod.rs
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: desktop.json  migrated.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/resources/: schema.json  sign_message.gql
ui/src-tauri/src/: app_state.rs  config.rs  encryption.rs  lib.rs  logs.rs  main.rs  menu.rs  system_tray.rs  util.rs
ui/src-tauri/src/commands/: app.rs  mod.rs  proxy.rs  state.rs
(+1566 files in other folders)
