[workspace]
resolver = "2"
members = [
    "cli",
    "rust-client",
    "rust-executor",
    "ui/src-tauri"
]

[patch.crates-io]
# DEBUG: Using forked kitsune2 with debugging instrumentation and fixed default behavior
# These patches ensure ad4m uses the fixed kitsune2 that doesn't default to blocking
kitsune2_api = { git = "https://github.com/lucksus/kitsune2.git", branch = "debug-logs" }
#kitsune2_core = { git = "https://github.com/lucksus/kitsune2.git", branch = "fix/unexpected-blocked-messages" }
#kitsune2 = { git = "https://github.com/lucksus/kitsune2.git", branch = "fix/unexpected-blocked-messages" }
#kitsune2_dht = { git = "https://github.com/lucksus/kitsune2.git", branch = "fix/unexpected-blocked-messages" }
#kitsune2_gossip = { git = "https://github.com/lucksus/kitsune2.git", branch = "fix/unexpected-blocked-messages" }
#kitsune2_bootstrap_srv = { git = "https://github.com/lucksus/kitsune2.git", branch = "fix/unexpected-blocked-messages" }
#kitsune2_bootstrap_client = { git = "https://github.com/lucksus/kitsune2.git", branch = "fix/unexpected-blocked-messages" }
kitsune2_transport_iroh = { git = "https://github.com/lucksus/kitsune2.git", branch = "debug-logs" }