[package]
name = "ad4m"
version = "0.4.2"
edition = "2021"
authors = ["Nicolas Luck <nicolas@perspect3vism.org>"]
description = "A command-line interface to AD4M (i.e. the AD4M executor) - https://ad4m.dev"
keywords = ["ad4m", "perspect3vism", "cli"]
license = "CAL-1.0"
homepage = "https://ad4m.dev"
repository = "https://github.com/perspect3vism/ad4m"
documentation = "https://docs.ad4m.dev"
readme = "README.md"

[dependencies]
ad4m-client = { path = "../rust-client", version = "0.4.2" }
anyhow = "1.0.65"
clap = { version = "4.0.8", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rustyline = "10"
dirs = "4"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
urlencoding = "2"
unicode-width = "0.1"
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
colour = "0.6.0"
syntect = "5.0"
