[package]
name = "ad4m"

version = "0.10.0-rc12"

edition = "2021"
authors = ["Nicolas Luck <nicolas.luck@coasys.org>"]
description = "Executables for running, developing and debugging an ADAM node/agent"
keywords = ["ad4m", "coasys", "cli", "holochain"]
license = "CAL-1.0"
homepage = "https://ad4m.dev"
repository = "https://github.com/coasys/ad4m"
documentation = "https://docs.ad4m.dev"
readme = "README.md"

[[bin]]
name = "ad4m"
path = "src/ad4m.rs"

[[bin]]
name = "ad4m-executor"
path = "src/ad4m_executor.rs"

[dependencies]


ad4m-client = { path = "../rust-client", version="0.10.0-rc12"}
ad4m-executor = { path = "../rust-executor", version="0.10.0-rc12" }
anyhow = "1.0.65"
clap = { version = "4.0.8", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.25.0", features = ["full"] }
rustyline = "10"
dirs = "4"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1"
urlencoding = "2"
unicode-width = "0.1"
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
colour = "0.7.0"
syntect = "5.0"
ctrlc = "3.4.0"

serde_cbor = "0.11"
#holochain_kitsune_p2p = "0.3.0-beta-dev.37"
kitsune_p2p_types = { version = "0.3.6", git = "https://github.com/coasys/holochain.git", branch = "0.3.6-coasys" }
