[package]
name = "ad4m-client"
version = "0.10.0-rc2"
edition = "2021"
authors = ["Nicolas Luck <nicolas@coasys.org>"]
description = "Client library wrapping AD4M's GraphQL interface"
keywords = ["ad4m", "perspect3vism", "cli"]
license = "CAL-1.0"
homepage = "https://ad4m.dev"
repository = "https://github.com/perspect3vism/ad4m"
documentation = "https://docs.ad4m.dev"
readme = "README.md"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.8", features = ["derive"] }
graphql_client = "0.12.0"
serde = "1.0.147"
reqwest = { version = "0.11.20", features = ["blocking", "json", "native-tls"] }
futures = "0.3"
tokio = { version = "1.25.0", features = ["full"] }
rustyline = "10"
dirs = "4"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1"
graphql-ws-client = { version = "0.4", default-features = false, features = ["async-tungstenite", "graphql_client"] }
async-tungstenite = { version = "0.20.0", features = ["tokio-runtime"] }
urlencoding = "2"
unicode-width = "0.1"
rand = "0.8"
regex = "1"
maplit = "1"
