[package]
name = "ad4m-executor"
version = "0.11.2-dev"
edition = "2021"
authors = ["Nicolas Luck <nicolas.luck@coasys.org>"]
description = "Runtime implementation of AD4M as library - https://ad4m.dev"
keywords = ["ad4m", "perspect3vism", "cli"]
license = "CAL-1.0"
homepage = "https://ad4m.dev"
repository = "https://github.com/perspect3vism/ad4m"
documentation = "https://docs.ad4m.dev"
readme = "README.md"

include = [
    "src/**/*",
    "dapp/dist", # Symlink to the dapp directory
    "executor/lib/bundle.js", # Symlink to the executor directory
    "build.rs",
    "Cargo.toml"
]

[lib]
name = "rust_executor"
path = "src/lib.rs"

[[bin]]
name = "generate_snapshot"
path = "src/bin/generate_snapshot.rs"

[features]
# Pass metal and cuda features (set through build.rs) through to kalosm
default = []
metal = ["kalosm/metal"]
cuda = ["kalosm/cuda"]
generate_snapshot = []  # Feature flag for snapshot generation mode


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = {version = "0.347.0", git = "https://github.com/coasys/deno_core.git", branch = "new-v8-dylib"  }
deno_runtime = {version = "0.212.0", git = "https://github.com/coasys/deno.git", branch = "new-v8-dylib-hickory-update", features=["transpile", "snapshot"] }
deno_resolver = {version = "0.35.0", git = "https://github.com/coasys/deno.git", branch = "new-v8-dylib-hickory-update" }
deno_fs = {version = "0.114.0", git = "https://github.com/coasys/deno.git", branch = "new-v8-dylib-hickory-update" }
deno_lib = {version = "0.20.0", git = "https://github.com/coasys/deno.git", branch = "new-v8-dylib-hickory-update" }
deno_snapshots = {version = "0.19.0", git = "https://github.com/coasys/deno.git", branch = "new-v8-dylib-hickory-update" }
sys_traits = "=0.1.9"
# deno_runtime = {version = "0.162.0", path = "../../deno/runtime"}
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
futures = "0.3.28"
tokio-stream = { version = "0.1.12", features = ["sync"] }
lazy_static = "1.4.0"
signal-hook = "0.3"
chrono = { version = "0.4.6", features = ["serde"] }
env_logger = "0.10.0"
colored = "2.0"
serde_json = "1.0.95"
uuid = "1.3.0"
log = "0.4.19"
serde = "1.0.159"
secp256k1 = { version = "0.27.0", features = ["rand", "serde"] }
crypto_box = "0.8.2"
hex = "0.4.3"
argon2 = { version = "0.5.0", features = ["simple"] }
rand = "0.8.5"
base64 = "0.21.0"
clap = { version = "4.0.8", features = ["derive"] }
fs_extra = "1.3.0"
os_info = "3.7.0"
semver = "1.0.17"
did-key = "0.2.1"
zip = "0.6.4"
multibase = "0.9.1"
multihash = { version = "0.18.0", features = ["sha2"] }
cid = "0.10.1"
once_cell = "1.17.1"
rust-embed="8.0.0"
dirs = "5.0.1"
rocket = "0.5.0"

coasys_juniper = { version="0.16.0", features = ["chrono"] }
coasys_juniper_subscriptions = { version="0.17.0" }
coasys_juniper_graphql_transport_ws = { version="0.4.0" }
coasys_juniper_warp = { version="0.8.0", features = ["subscriptions"] }
warp = "0.3"

jsonwebtoken = "8.3.0"

webbrowser = "0.8.12"

# holochain = { version = "0.5.2", features = ["test_utils", "default"] }
# holochain_cli_bundle = { version = "0.5.2" }
# holochain_types = { version = "0.5.2" }
holochain_cli_run_local_services = { version = "0.5.0-dev.12" }
kitsune_p2p_types = { version = "0.5.0-dev.9" }
kitsune2_api = "0.1.15"
holochain = { version = "0.7.0-dev.7", features = ["test_utils", "default", "transport-iroh"], git = "https://github.com/coasys/holochain.git", branch = "0.7.0-dev.7-coasys" }
holochain_cli_bundle = { version = "0.7.0-dev.7", git = "https://github.com/coasys/holochain.git", branch = "0.7.0-dev.7-coasys" }
holochain_types = { version = "0.7.0-dev.7", git = "https://github.com/coasys/holochain.git", branch = "0.7.0-dev.7-coasys" }
lair_keystore_api = { version = "0.6.3", git = "https://github.com/coasys/lair.git", branch = "0.6.3-coasys" }
sodoken = "=0.1.0"

scryer-prolog = { version = "0.10", git = "https://github.com/coasys/scryer-prolog", branch = "ad4m" }
# scryer-prolog = { path = "../../scryer-prolog", features = ["multi_thread"] }

ad4m-client = { path = "../rust-client", version="0.11.2-dev" }
reqwest = { version = "0.11.20", features = ["json", "native-tls"] }

# rusqlite = { version = "0.29.0", git = "https://github.com/coasys/rusqlite.git", rev = "12ec1330bd4b46411ab9895364da4a3e172d0fbb", features = ["bundled"] }
rusqlite = "0.34.0"
fake = { version = "2.9.2", features = ["derive"] }
sha2 = "0.10.8"
regex = "1.5.4"
json5 = "0.4"
rayon = "1.7.0"  # For parallel processing in filtering optimization
lettre = "0.11"  # For sending verification emails via SMTP

include_dir = "0.6.0"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

kalosm = { version = "0.3.2", git = "https://github.com/coasys/floneum.git", branch = "coasys-2-without-pdf", features = ["language", "sound"] }
candle-core = "0.8.2"
deflate = "1.0.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
futures-channel = "0.3.30"
rodio = "*"
libc = "0.2"
chat-gpt-lib-rs = { version = "0.5.1", git = "https://github.com/coasys/chat-gpt-lib-rs" }
anyhow = "1.0.95"
portpicker = "0.1.1"
deno_error = "0.5.6"
thiserror = "2.0.12"
surrealdb = { version = "2.4", default-features = false, features = ["kv-mem", "scripting"] }

[dev-dependencies]
maplit = "1.0.2"
lazy_static = "1.4.0"
itertools = "0.10.1"

[build-dependencies]
fs_extra = "1.3.0"


[patch.crates-io]
rusqlite = { version = "0.34.0" }
