[package]
name = "ad4m-launcher"
version = "0.10.0-rc11"
description = "Administration of ad4m services"
authors = ["Kaichao Sun"]
license = ""
repository = ""
default-run = "ad4m-launcher"
edition = "2021"
rust-version = "1.57"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
log4rs = "1.0.0"
nix = "0.23.1"
portpicker = "0.1.1"
libc = "0.2.121"
directories = "4.0.1"
opener = "0.5.0"
open = "2.0.1"
sysinfo = "0.29.7"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
uuid = { version = "0.8", features = ["v4"] }
localtunnel-client = "0.0.12"
tokio = { version = "1.19.2", features = ["full"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
remove_dir_all = "0.7.0"
reqwest = { version = "0.11.20", features = ["json", "native-tls"] }
ad4m-client = { path = "../../rust-client" }
ad4m-executor = { path = "../../rust-executor" }
chrono = "0.4"
env_logger = "0.10.0"
colored = "2.0"
tracing = { version = "0.1.37", features = ["log-always"] }
tracing-subscriber = "0.2"
webbrowser = "0.8.12"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.0.0-alpha.2"
tauri-plugin-shell = "2"
dirs = "5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol"]
# Pass metal and cuda features through to ad4m-executor
metal = ["ad4m-executor/metal"]
cuda = ["ad4m-executor/cuda"]


dev = []
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

