[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "agent_store_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "agent_store_integrity"

[dependencies]
derive_more = "0"
serde = "1.0.198"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }

hdi = { version = "0.5.0-dev.5", git = "https://github.com/coasys/holochain.git", rev = "dbc501b27e1728132655860993a08633136d9139" }
hdk = { version = "0.4.0-dev.6", git = "https://github.com/coasys/holochain.git", rev = "dbc501b27e1728132655860993a08633136d9139"}