[package]
authors = ["josh@junto.foundation"]
edition = "2021"
name = "agent_store_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "agent_store_integrity"

[dependencies]
derive_more = "0"
serde = "1.0.198"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }

hdi = { version = "0.6.2", git = "https://github.com/coasys/holochain.git", branch = "0.5.2-coasys" }
hdk = { version = "0.5.2", git = "https://github.com/coasys/holochain.git", branch = "0.5.2-coasys" }
holochain_serialized_bytes = { version = "=0.0.56", git = "https://github.com/holochain/holochain-serialization"}