[package]
name = "direct-message-integrity"
version = "0.1.0"
authors = ["Nicolas Luck <nicolas@lucksus.eu>", "Joshua Parkin <joshuadparkin@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "direct_message_integrity"

[dependencies]
derive_more = "0"
serde = "1.0.198"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }

hdi = { version = "0.4.6", git = "https://github.com/coasys/holochain.git", branch = "0.3.6-coasys" }
holo_hash =  { version = "0.3.6", git = "https://github.com/coasys/holochain.git", branch = "0.3.6-coasys" }
