[package]
name = "direct-message-integrity"
version = "0.1.0"
authors = ["Nicolas Luck <nicolas@lucksus.eu>", "Joshua Parkin <joshuadparkin@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "direct_message_integrity"

[dependencies]
derive_more = "0"
serde = "1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }

hdi = { version = "0.7.0-rc.0", git = "https://github.com/coasys/holochain.git", branch = "0.6.0-rc.0-coasys" }
holochain_serialized_bytes = "=0.0.56"
holo_hash =  { version = "0.6.0-rc.0", git = "https://github.com/coasys/holochain.git", branch = "0.6.0-rc.0-coasys" }
