[package]
name = "direct-message"
version = "0.1.0"
authors = ["Nicolas Luck <nicolas@lucksus.eu>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "direct_message"

[dependencies]
derive_more = "0"
serde = "1.0.198"
serde_json = "1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
hex = "0.4.3"

hdk = { version = "0.3.6", git = "https://github.com/coasys/holochain.git", branch = "0.3.6-coasys" }
holo_hash =  { version = "0.3.6", git = "https://github.com/coasys/holochain.git", branch = "0.3.6-coasys" }

direct-message-integrity = { path = "../direct-message-integrity" }