[package]
name = "direct-message"
version = "0.1.0"
authors = ["Nicolas Luck <nicolas@lucksus.eu>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "direct_message"

[dependencies]
derive_more = "0"
serde = "1.0.198"
serde_json = "1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
hex = "0.4.3"
getrandom = { version = "0.3" }

hdk = { version = "0.7.0-dev.6", git = "https://github.com/coasys/holochain.git", branch = "0.7.0-dev.10-coasys" }
holochain_serialized_bytes = "=0.0.56"
holo_hash =  { version = "0.7.0-dev.3", git = "https://github.com/coasys/holochain.git", branch = "0.7.0-dev.10-coasys" }

direct-message-integrity = { path = "../direct-message-integrity" }

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="custom"']