[package]
name = "file_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_storage"

[dependencies]
derive_more = "0"
serde = "1"
lazy_static = "*"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
thiserror = "1"
integrity = { path = "../integrity" }
sha2 = "0.10.5"
getrandom = { version = "0.3" }

hdk = { version = "0.7.0-dev.6", git = "https://github.com/coasys/holochain.git", branch = "0.7.0-dev.10-coasys" }
holochain_serialized_bytes = "=0.0.56"
holo_hash =  { version = "0.7.0-dev.3", git = "https://github.com/coasys/holochain.git", branch = "0.7.0-dev.10-coasys" }

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="custom"']